Fixed issue where galaxy wasn't aligning properly in chrome; improved widths to maintain alignment with resizing.

--- a/media/css/style.css
+++ b/media/css/style.css
@@ -477,13 +477,13 @@ ul#view-header li {
 }
 
 #left-column-container div#sectors-tab {
-    min-height: 355px;
+    min-height: 395px;
     -moz-border-radius-topleft: 0px !important;
     -webkit-border-top-left-radius: 0px !important;
 }
 
 #left-column-container div#societies-tab {
-    min-height: 355px;
+    min-height: 395px;
     -moz-border-radius-topright: 0px !important;
     -webkit-border-top-right-radius: 0px !important;
     overflow-y:scroll;
@@ -822,14 +822,14 @@ span#roamer-beta-warning {
 #alternate-page #tag-galaxy {
     -moz-border-radius: 5px;
     -webkit-border-radius: 5px;
-    padding: 0 5px 2px 0;
-    margin-right:34px;
+    padding: 0 3px 2px 0;
+    margin-right: 0;
     background-color: white;
     overflow: hidden;
 }             
 
 #alternate-page #tag-galaxy .alt-box-pad {
-    min-height: 390px;
+    min-height: 388px !important;
     overflow: auto;
 }
 
@@ -1154,7 +1154,7 @@ table.vert-center td {
 #frequencybar-tags {
     display: inline-block;
     height: 21px;
-    width: 100%;
+    width: 96%;
 }
 
 #frequencybar {
@@ -2370,12 +2370,11 @@ div#connectedness-container {
 
 /*DropDowns*/
 #textui-tags-sort {
-float: right;    
+    float: right;    
 }
 
 #sortContainer_outter {
     float: right;
-    width: 200px;
 }
 
 #sortContainer_inner {
@@ -2722,7 +2721,7 @@ width: 100%;
 
 #inner-container {
 width: 85%;
-min-width: 1010px;
+min-width: 1100px;
 margin: 30px auto 5px;
 padding: 0 10px 10px 10px;
 position: relative;
